@@ -10,7 +10,7 @@
 .\" the Free Software Foundation; either version 2 of the License, or
 .\" (at your option) any later version.
 .\"
-.TH PGREP 1 2025-06-11 procps-ng
+.TH PGREP 1 2025-12-29 procps-ng
 .SH NAME
 pgrep, pkill, pidwait \- look up, signal, or wait for processes based on name and other attributes
 .SH SYNOPSIS
@@ -249,6 +249,9 @@ limit which namespaces to match.
 \fB\-\-nslist \fIname\fP,.\|.\|.
 Match only the provided namespaces. Available namespaces:
 ipc, mnt, net, pid, user, uts.
+.TP
+\fB\-\-quiet\fR
+Do not write anything to standard output (\fBpgrep\fR only).
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 Display version information and exit.
