@@ -11,6 +11,7 @@ procps-ng-NEXT
   * pgrep: Add shell quoting                               merge !248
   * pgrep: Use pidfd_send_signal()                         issue #207
   * pgrep.1: Note that we can only go to 100th of second   issue #376
+  * pgrep: Add --quiet option                              issue #404
   * pmap: add -k option to print raw names from kernel     merge !251
   * ps: parse --help correctly                             issue #381
   * ps: Add --delimiter option                             issue #118
@@ -20,6 +21,7 @@ procps-ng-NEXT
   * ps.1: Add format equivalents                           Debian #925437
   * ps: avoid potential segfault due to library race       issue #380
   * ps: Fix -ad option conflict                            issue #395
+  * ps: ppid of 0 is ok, fix parser                        issue #405
   * slabtop: Increase column width                         Debian #959375
   * sysctl: Return error if EPERM or EISDIR                merge !228
   * sysctl: Use options after --system                     Debian #978989
